// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds notification views fetches notifications omitting mentions and replies by a muted user 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(4)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "handle": "carol.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(5)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(7)",
        "uri": "record(5)",
      },
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "handle": "carol.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(8)",
  },
]
`;

exports[`pds notification views fetches notifications omitting mentions and replies for taken-down posts 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(4)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "handle": "carol.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(5)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(7)",
        "uri": "record(5)",
      },
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "handle": "carol.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(8)",
  },
]
`;

exports[`pds notification views fetches notifications with a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "of course",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(5)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(6)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(8)",
        "uri": "record(6)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(3)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(9)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(10)",
  },
]
`;

exports[`pds notification views fetches notifications without a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "of course",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(5)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(6)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(8)",
        "uri": "record(6)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(3)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(9)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(10)",
  },
]
`;
